projects/angular-utilities/src/table-builder/components/generic-table/generic-table.component.scss
.mat-mdc-row:nth-child(odd) {
  background-color: var(--tb-row-stripe-bg, #cdeefe)
}

// Tint the column-header row so it visually merges with the toolbar bar above
// instead of showing as a white strip. Uses the same surface tier as
// .header-wrapper / .flx-row-end. The Material header cells inherit the row
// background, so we only need to set it once.
:host::ng-deep .mat-mdc-header-row {
  background-color: var(--mat-sys-secondary-container, #cce8e7);
}

.sticky {
  bottom: 0px;
  position: sticky;
  border-top: .5px solid rgba(0,0,0,.12);
}

.page-amounts{
  color: rgba(0, 0, 0, 0.54);
  font-family: Roboto, "Helvetica Neue", sans-serif;
  font-size: 12px;
  margin-right: .2rem;
}

.flx-row-end{
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  background-color: var(--mat-sys-secondary-container, #cce8e7);
}

:host::ng-deep mat-paginator {
  background-color: inherit;
}
:host::ng-deep.mat-mdc-paginator-container {
  min-height: initial !important;
}

.group-header {
  display: flex;
}

:host::ng-deep .table-drag-list.cdk-drop-list-dragging  .drag-header:not(.cdk-drag-placeholder) {
  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
}
:host::ng-deep{
  & .mdc-data-table__cell, .mdc-data-table__header-cell, .mdc-data-table__cell, .mdc-data-table__header-cell{
    padding: 0 0 0 .2rem;
    line-height: normal;
  }
}
::ng-deep .op-date-time-input{
  line-height: 3rem;
  font-size: .9rem;
  font-family: Roboto, "Helvetica Neue", sans-serif;
  padding-left: 0.2rem;
  width: 12rem;
}

